--- a/views/list_customers.ejs
+++ b/views/list_customers.ejs
@@ -12,35 +12,46 @@
 
   <body>
     <div class="container" style="margin-top: 20px">
-      <div class="col-3"><%- include("sidebar") %> </div>
+      <div class="col-3"><%- include("sidebar") %></div>
       <div class="col-9 ps-4">
         <h1>List Customers</h1>
         <table border="1" cellspacing="0" cellpadding="5">
           <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Gender</th>
-              <th>DOB</th>
-              <th>Created</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Gender</th>
+            <th>DOB</th>
+            <th>Created</th>
           </tr>
           <% customers.forEach(customer => { %>
-              <tr>
-                  <td><%= customer._id %></td>
-                  <td><%= customer.name %></td>
-                  <td><%= customer.gender %></td>
-                  <td><%= customer.birthday ? new Date(customer.birthday).toLocaleString() : "N/A" %></td>
-                  <td><%= customer.created ? new Date(customer.created).toLocaleString() : "N/A" %></td>
-                  <td>
-                    <a href="/customers/<%= customer._id %>" class="btn btn-warning">Edit</a>
-                    <form action="/customers/<%= customer._id %>/delete" method="POST">
-                      <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-                  </td>
-              </tr>
+          <tr>
+            <td><%= customer._id %></td>
+            <td><%= customer.name %></td>
+            <td><%= customer.gender %></td>
+            <td>
+              <%= customer.birthday ? new
+              Date(customer.birthday).toLocaleString() : "N/A" %>
+            </td>
+            <td>
+              <%= customer.created ? new Date(customer.created).toLocaleString()
+              : "N/A" %>
+            </td>
+            <td>
+              <a href="/customers/<%= customer._id %>" class="btn btn-warning"
+                >Edit</a
+              >
+              <form
+                action="/customers/<%= customer._id %>/delete"
+                method="POST"
+              >
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </form>
+            </td>
+          </tr>
           <% }); %>
-      </table>
+        </table>
+      </div>
     </div>
-  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
